--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,11 @@ font-size: 14px;
 line-height: 1.5;
 }
 
+.container{
+     width: 1200px;
+
+}
+
 .visually-hidden {
      position: absolute;
      width: 1px;
