--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,11 @@ line-height: 1.5;
 }
 
 .container{
-     width: 1200px;
+      width: 1200px;
+      margin-left: auto;
+      margin-right: auto;
+      outline: 2px solid tomato;
+          
 
 }
 
