--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,20 @@
 --button-color: #F5F4FA;
 }
 
+p, h1, h2, h3 { 
+margin: 0px;
+}
+
+ul{
+     margin: 0px;
+     padding-left: 0px;
+}
+
+button {
+     cursor: pointer;
+
+}
+
 body {
 font-family: Roboto, sans-serif;
 background-color: var(--primary-white-color);
@@ -15,7 +29,7 @@ font-size: 14px;
 line-height: 1.5;
 }
 
-.container{
+.container {
       width: 1200px;
       margin-left: auto;
       margin-right: auto;
@@ -53,13 +67,13 @@ ul{
 
 
 
-.page{
+.page {
 
 }
 .page-header {
 
 }
-.page .firstpart-logo{
+.page .firstpart-logo {
           
      
           font-family: 'Raleway';
@@ -106,7 +120,7 @@ color: #2196F3;
 /* Портфоліо */
 
 /* Контакти */
-.site-info{
+.site-info {
      
 }
 
@@ -122,7 +136,8 @@ color: #2196F3;
      color: #757575;
 }
 
-.section{
+.section .section-service .section-work .section-team  {
+      width: 1200px;
       padding-top: 94px;
       padding-bottom: 94px;
 }
@@ -230,7 +245,9 @@ color: #2196F3;
 
 
 /* Секція 2 */
+.section-service{
 
+}
 /* Особливості */
 
 /* УВАГА ДО ДЕТАЛЕЙ */
@@ -247,7 +264,9 @@ color: #2196F3;
 
 /* Секція 3 */
 /* Чим ми займаємося */
+.section-work {
 
+}
 /* box 1 */
 
 /* box 2 */
@@ -257,7 +276,9 @@ color: #2196F3;
 
 /* Секція 4 */ /* Section bg */
 /* Наша команда */
-
+.section-team {
+     
+}
 /* team */
 
 /* team card 1 */
